--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- viewport meta tag for proper mobile scaling -->
   <link rel="stylesheet" href="styles.css">
- 
+  <link rel="stylesheet" href="selector.css">
   <style>
     table,
     th,
@@ -137,7 +137,8 @@
 
   </div>
   <h1 align="center">oUITS-Resources</h1>
-  <p align="center" style="margin-bottom: -10px;"><small><i>Resources for UITS Students</i></small><br><small><i style="font-size: xx-small;">(more relevant to CSE)</i></small></p>
+  <p align="center" style="margin-bottom: -10px;"><small><i>Resources for UITS Students</i></small><br><small><i
+        style="font-size: xx-small;">(more relevant to CSE)</i></small></p>
 
   <!-- -------------------------------------------------------------------- -->
 
@@ -146,49 +147,173 @@
 
 
 
-   <!-- -------------------------------------------------------------------- -->
+  <!-- -------------------------------------------------------------------- -->
 
-  <div class="container-5" style="width:76%;">
+  <div class="container-5" style="width:76%;max-width: 600px;">
     <table class="resources-table-5" align="center" style="width:90%; margin: auto;">
       <tr>
-        <td colspan="4" style="background-color: #00000000;">
+        <td colspan="2" style="background-color: #00000000;">
           <p class="highlights-5" align="center" style="color: rgba(240, 248, 255, 0.649);">Browse Resources</p>
         </td>
       </tr>
       <tr>
+        <td colspan="2" >
+          <a href="page-depth-01/General-Info.html" class="cell-link">
+            General Information<br><small><i style="font-size: xx-small;">(Notice,Questions,Outlines,...)</i></small>
+          </a>
+        </td>
+      </tr>
+    </table>
+
+        <!-- <tr><td> -->
+    <div style="width: 90%;margin: auto;margin-top: -10px;margin-bottom: -15px;" class=".resources-table-5" align="center">
+      <!-- <p class="highlights-5" align="center" style="margin-top: 5px;margin-bottom: -12px;color: rgba(240, 248, 255, 0.649);">Departments<br><small><i>(CSE,CE,EEE,...)</i></small></p> -->
+
+      <label for="department"></label>
+      <select id="department" onchange="updateSemesters()"
+        style="padding: 5%;max-width: 250px;border-radius: 20px;min-height: 60px;margin-left: 5%;">
+        <option value="" align="center">Department List</option>
+        <option value="cse">CSE</option>
+        <option value="ce">CE</option>
+        <!-- <option value="me">Mechanical Engineering</option> -->
+      </select>
+
+      <div id="semesterList"></div>
+
+      <p id="driveLink"></p>
+
+      <script>
+        // Object mapping departments to semester Google Drive folder links
+        const driveLinks = {
+          cse: {
+            1: "page-depth-02/S01.html",
+            2: "page-depth-02/S02.html",
+            3: "page-depth-02/S03.html",
+            4: "page-depth-02/S04.html",
+            5: "page-depth-02/S05.html",
+            6: "page-depth-02/S06.html",
+            7: "page-depth-02/S07.html",
+            8: "page-depth-02/S08.html",
+          },
+          ce: {
+            1: "https://drive.google.com/drive/folders/1Q4-tnRaIoLjZenzEZTRs-35OgqV54l9W?usp=drive_link",
+            2: "https://drive.google.com/drive/folders/1gAajNJtRo3up6dpnP-R3cTx0trNikJVP?usp=drive_link",
+            3: "https://drive.google.com/drive/folders/1XecebUV1rScSMpO0TUbnVoPUWKS8bJAH?usp=drive_link",
+            4: "https://drive.google.com/drive/folders/1R3AkpHgDgB2FiHS-gXxPTV7eljZJRknm?usp=drive_link",
+            5: "#",
+            6: "#",
+            7: "#",
+            8: "#",
+          }
+          //   ,
+          //   me: {
+          //       1: "https://drive.google.com/folder_me_sem1",
+          //       2: "https://drive.google.com/folder_me_sem2",
+          //       3: "https://drive.google.com/folder_me_sem3",
+          //       4: "https://drive.google.com/folder_me_sem4",
+          //       5: "https://drive.google.com/folder_me_sem5",
+          //       6: "https://drive.google.com/folder_me_sem6",
+          //       7: "https://drive.google.com/folder_me_sem7",
+          //       8: "https://drive.google.com/folder_me_sem8",
+          //   }
+        };
+
+        // Use sessionStorage to maintain state
+        window.addEventListener('load', () => {
+          // Restore department selection
+          const savedDepartment = sessionStorage.getItem('selectedDepartment');
+          if (savedDepartment) {
+            document.getElementById('department').value = savedDepartment;
+            updateSemesters();
+
+            // Restore active semester if exists
+            const savedSemester = sessionStorage.getItem('selectedSemester');
+            if (savedSemester) {
+              const semesterButton = document.querySelector(`.semester-button[data-semester="${savedSemester}"]`);
+              if (semesterButton) {
+                semesterButton.classList.add('active');
+              }
+            }
+          }
+        });
+
+        function updateSemesters() {
+          let department = document.getElementById("department").value;
+          let semesterList = document.getElementById("semesterList");
+          let driveLink = document.getElementById("driveLink");
+
+          // Save selected department to sessionStorage
+          sessionStorage.setItem('selectedDepartment', department);
+
+          // Clear previous semesters and drive link
+          semesterList.innerHTML = "";
+          driveLink.innerHTML = "";
+
+          if (department) {
+            // Create semester buttons
+            for (let i = 1; i <= 8; i++) {
+              let semesterButton = document.createElement("button");
+              semesterButton.textContent = `Semester ${i}`;
+              semesterButton.classList.add('semester-button');
+              semesterButton.setAttribute('data-semester', i);
+              semesterButton.onclick = function () {
+                // Remove active class from all buttons
+                document.querySelectorAll('.semester-button').forEach(btn => {
+                  btn.classList.remove('active');
+                });
+
+                // Add active class to clicked button
+                this.classList.add('active');
+
+                // Save selected semester to sessionStorage
+                sessionStorage.setItem('selectedSemester', i);
+
+                // Open drive folder
+                openDriveFolder(department, i);
+              };
+              semesterList.appendChild(semesterButton);
+            }
+          }
+        }
+
+        function openDriveFolder(department, semester) {
+          let driveLink = document.getElementById("driveLink");
+          window.location.href = driveLinks[department][semester];
+        }
+      </script>
+    </div>
+    <!-- </td>
+  </tr>
+</table> -->
+    <table class="resources-table-5" align="center" style="width:90%; margin: auto;">
+
+      <!-- <tr>
         <td>
           <a href="page-depth-01\Semester-List.html" class="cell-link">
             Departments<br><small><i style="font-size: xx-small;">(CSE,CE,EEE,...)</i></small>
-          </a>
-          <!-- <a href="https://drive.google.com/drive/folders/1n29sfMaCF_S4ffbjudBBSGBd6Q7l3Sqp?usp=drive_link" target="_blank" class="cell-link">
+          </a> -->
+      <!-- <a href="https://drive.google.com/drive/folders/1n29sfMaCF_S4ffbjudBBSGBd6Q7l3Sqp?usp=drive_link" target="_blank" class="cell-link">
             Departments<br><small><i style="font-size: xx-small;">(CSE,CE,EEE,...)</i></small>
           </a> -->
-        </td>
-        <td>
-          <!-- <p> -->
-          <a href="page-depth-01/General-Info.html" class="cell-link">
-            General Information<br><small><i style="font-size: xx-small;">(Notice,Questions,Outlines,...)</i></small>
-            <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
-          </a>
+      </td>
+
+      <td>
+        <!-- <p> -->
+        <a href="page-depth-01\CP-aux.html" class="cell-link">
+          Programming
+          <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
           <!-- </p> -->
-        </td>
-        <td>
-          <!-- <p> -->
-          <a href="page-depth-01\CP-aux.html" class="cell-link">
-            Programming
-            <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
-            <!-- </p> -->
-        </td>
+      </td>
 
 
-        <td>
-          <!-- <p> -->
-          <a href="page-depth-01\Curated-Resources.html" class="cell-link">
-            Resources Dump
-            <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
-          </a>
-          <!-- </p> -->
-        </td>
+      <td>
+        <!-- <p> -->
+        <a href="page-depth-01\Curated-Resources.html" class="cell-link">
+          Resources Dump
+          <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
+        </a>
+        <!-- </p> -->
+      </td>
       </tr>
     </table>
   </div>
@@ -213,13 +338,13 @@
     </a>
   </div>
   <br>
-  <p align=center style="font-size: x-small;color: #00000086;">This Section was inspired by <a href="https://notebot.netlify.app/"
-      target="_blank" style="color: #0244f99d;">https://notebot.netlify.app/</a></p>
+  <p align=center style="font-size: x-small;color: #00000086;">This Section was inspired by <a
+      href="https://notebot.netlify.app/" target="_blank" style="color: #0244f99d;">https://notebot.netlify.app/</a></p>
 
-      <div style="justify-content: center;display:flex;">
-        <hr style="border: 5px solid rgba(0, 0, 0, 0.619);
+  <div style="justify-content: center;display:flex;">
+    <hr style="border: 5px solid rgba(0, 0, 0, 0.619);
       border-radius: 5px;margin-left: 150px;margin-right: 150px;margin-bottom: 50px;min-width: 200px;width:50%">
-      </div>
+  </div>
 
   <!-- TABLE FOR SOCIALS AND END CREDIT -->
 
@@ -228,9 +353,10 @@
   <div align="center">
     <div>
       <!-- SOCIAL LINKS -->
-      
+
       <p align=center style="color: #00000086;">Join our Socials </p>
-      <p align=center style="color: #00000061;font-size: x-small;margin-top: -10px;"><i>for comments and suggestions</i></p>
+      <p align=center style="color: #00000061;font-size: x-small;margin-top: -10px;"><i>for comments and suggestions</i>
+      </p>
 
       <a href="https://discord.gg/weetUpfS5X" target="_blank"><img src=images\discord-logo.webp
           alt="Discord Server (Protein Shake)" width="70" height="70"></a>
@@ -241,7 +367,7 @@
       <a href="https://facebook.com/groups/1074592960836263/" target="_blank"><img src=images\fb-logo.webp
           alt="Facebook Group (oUITS - Online Resources)" width="70" height="70"></a>
 
-     
+
     </div>
 
     <div style="justify-content: center;display:flex;">
