--- a/index.html
+++ b/index.html
@@ -186,14 +186,14 @@
         // Object mapping departments to semester Google Drive folder links
         const driveLinks = {
           cse: {
-            1: "page-depth-02/S01.html",
-            2: "page-depth-02/S02.html",
-            3: "page-depth-02/S03.html",
-            4: "page-depth-02/S04.html",
-            5: "page-depth-02/S05.html",
-            6: "page-depth-02/S06.html",
-            7: "page-depth-02/S07.html",
-            8: "page-depth-02/S08.html",
+            1: "page-depth-01/page-depth-02/S01.html",
+            2: "page-depth-01/page-depth-02/S02.html",
+            3: "page-depth-01/page-depth-02/S03.html",
+            4: "page-depth-01/page-depth-02/S04.html",
+            5: "page-depth-01/page-depth-02/S05.html",
+            6: "page-depth-01/page-depth-02/S06.html",
+            7: "page-depth-01/page-depth-02/S07.html",
+            8: "page-depth-01/page-depth-02/S08.html",
           },
           ce: {
             1: "https://drive.google.com/drive/folders/1Q4-tnRaIoLjZenzEZTRs-35OgqV54l9W?usp=drive_link",
