--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       border-radius: 10px;
     }
 
+    td{
+      min-width: 200px;
+    }
     .container-6 {
       display: grid;
       place-items: center;
@@ -137,28 +140,23 @@
 
   </div>
   <h1 align="center">oUITS-Resources</h1>
-  <p align="center" style="margin-bottom: -10px;"><small><i>Resources for UITS Students</i></small><br><small><i
-        style="font-size: xx-small;">(more relevant to CSE)</i></small></p>
+  <!-- <p align="center" style="margin-bottom: -10px;"><small><i>Resources for UITS Students</i></small><br><small><i
+        style="font-size: xx-small;">(more relevant to CSE)</i></small></p> -->
 
   <!-- -------------------------------------------------------------------- -->
-
-
-
-
-
-
   <!-- -------------------------------------------------------------------- -->
 
   <div class="container-5" style="width:76%;max-width: 600px;">
     <table class="resources-table-5" align="center" style="width:90%; margin: auto;">
       <tr>
         <td colspan="2" style="background-color: #00000000;">
-          <p class="highlights-5" align="center" style="color: rgba(240, 248, 255, 0.649);">Browse Resources</p>
+          <p class="highlights-5" align="center" style="color: rgba(240, 248, 255, 0.649);margin-bottom: -5px;"><small><i>Browse resources for UITS Students</i></small><br><small><i
+            style="font-size: xx-small;">(more relevant to CSE)</i></small></p>
         </td>
       </tr>
       <tr>
-        <td colspan="2" >
-          <a href="page-depth-01/General-Info.html" class="cell-link">
+        <td colspan="2" style="max-width: 300px;display: block;margin: auto;">
+          <a href="page-depth-01/General-Info.html" class="cell-link" style="max-height: 80px;text-align: center;text-align: center;justify-content: center;">
             General Information<br><small><i style="font-size: xx-small;">(Notice,Questions,Outlines,...)</i></small>
           </a>
         </td>
