--- a/index.html
+++ b/index.html
@@ -318,10 +318,13 @@
 
   <div style="justify-content: center;display:flex;">
     <hr style="border: 5px solid rgba(0, 0, 0, 0.619);
-  border-radius: 5px;margin-left: 150px;margin-right: 150px;margin-bottom: 50px;min-width: 200px;width:50%">
+  border-radius: 5px;margin-left: 150px;margin-right: 150px;margin-bottom: 20px;min-width: 200px;width:50%">
   </div>
 
-  <p style="text-align: center;color: #00000086;">Feeling Generous?</p>
+  <div class="container-5"  style="width:76%;max-width: 600px;border-radius: 30px 0 30px 0;background-color: #a9cc75b3;">
+
+  
+  <p style="text-align: center;color: #000000cd;text-shadow: 1px 1px 5px #bcf444c2;">Feeling Generous?</p>
 
   <div class="container-6">
     <a class="cell-link" href="https://forms.gle/uFq1vBSUbRhY5CZk6" target="_blank"
@@ -335,6 +338,9 @@
       <i style="font-size: x-small;">(.zip Upload)</i>
     </a>
   </div>
+
+</div>
+
   <br>
   <p align=center style="font-size: x-small;color: #00000086;">This Section was inspired by <a
       href="https://notebot.netlify.app/" target="_blank" style="color: #0244f99d;">https://notebot.netlify.app/</a></p>
