--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       position: relative;
       /* background-color: #000000c5; */
       column-gap: 6%;
-      row-gap: 12%;
+      row-gap: 10px;
 
     }
 
