--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       /*the button visibility*/
       position: relative;
       /* background-color: #000000c5; */
-      column-gap: 6%;
-      row-gap: 10px;
+      column-gap: 10px;
+      row-gap: 12%;
 
     }
 
