--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
       border-radius: 10px;
     }
 
-    td{
+    td {
       min-width: 200px;
     }
+
     .container-6 {
       display: grid;
       place-items: center;
@@ -33,7 +34,7 @@
       /*the button visibility*/
       position: relative;
       /* background-color: #000000c5; */
-      column-gap: 20px;
+      column-gap: 30px;
       row-gap: 12%;
 
     }
@@ -150,26 +151,29 @@
     <table class="resources-table-5" align="center" style="width:90%; margin: auto;">
       <tr>
         <td colspan="2" style="background-color: #00000000;">
-          <p class="highlights-5" align="center" style="color: rgba(240, 248, 255, 0.649);margin-bottom: -5px;"><small><i>Browse resources for UITS Students</i></small><br><small><i
-            style="font-size: xx-small;">(more relevant to CSE)</i></small></p>
+          <p class="highlights-5" align="center" style="color: rgba(240, 248, 255, 0.649);margin-bottom: -2px;">
+            <small><i>Browse resources for UITS Students</i></small><br><small><i style="font-size: xx-small;">(more
+                relevant to CSE)</i></small></p>
         </td>
       </tr>
       <tr>
         <td colspan="2" style="max-width: 300px;display: block;margin: auto;">
-          <a href="page-depth-01/General-Info.html" class="cell-link" style="max-height: 80px;text-align: center;text-align: center;justify-content: center;">
+          <a href="page-depth-01/General-Info.html" class="cell-link"
+            style="max-height: 80px;text-align: center;text-align: center;justify-content: center;">
             General Information<br><small><i style="font-size: xx-small;">(Notice,Questions,Outlines,...)</i></small>
           </a>
         </td>
       </tr>
     </table>
 
-        <!-- <tr><td> -->
-    <div style="width: 90%;margin: auto;margin-top: -10px;margin-bottom: -15px;" class=".resources-table-5" align="center">
-      <!-- <p class="highlights-5" align="center" style="margin-top: 5px;margin-bottom: -12px;color: rgba(240, 248, 255, 0.649);">Departments<br><small><i>(CSE,CE,EEE,...)</i></small></p> -->
+    <!-- -------------------------------------------------------------------- -->
+
+    <div style="width: 85%;padding-right: 15px;margin: auto;margin-top: -10px;margin-bottom: -15px;"
+      class=".resources-table-5" align="center">
 
       <label for="department"></label>
       <select id="department" onchange="updateSemesters()"
-        style="padding: 5%;max-width: 250px;border-radius: 20px;min-height: 60px;margin-left: 5%;">
+        style="padding: 5%;max-width: 245px;border-radius: 20px;min-height: 60px;margin-left: 5%;">
         <option value="" align="center">Department List</option>
         <option value="cse">CSE</option>
         <option value="ce">CE</option>
@@ -280,9 +284,9 @@
         }
       </script>
     </div>
-    <!-- </td>
-  </tr>
-</table> -->
+
+    <!-- -------------------------------------------------------------------- -->
+
     <table class="resources-table-5" align="center" style="width:90%; margin: auto;">
 
       <!-- <tr>
@@ -321,25 +325,25 @@
   border-radius: 5px;margin-left: 150px;margin-right: 150px;margin-bottom: 20px;min-width: 200px;width:50%">
   </div>
 
-  <div class="container-5"  style="width:76%;max-width: 600px;border-radius: 30px 0 30px 0;background-color: #a9cc75b3;">
+  <div class="container-5" style="width:76%;max-width: 600px;border-radius: 30px 0 30px 0;background-color: #a9cc75b3;">
 
-  
-  <p style="text-align: center;color: #000000cd;text-shadow: 1px 1px 5px #bcf444c2;">Feeling Generous?</p>
 
-  <div class="container-6">
-    <a class="cell-link" href="https://forms.gle/uFq1vBSUbRhY5CZk6" target="_blank"
-      style="color: #424242;padding-top:15%;background-color: #ffffff;border-radius: 50px 50px 50px 50px;width: 120px;box-shadow: 1px 2px 10px #000000;text-align: center;padding: 8%;">
-      <strong>Upload<br>Questions</strong><br>
-      <i style="font-size: x-small;">(.pdf Upload)</i>
-    </a>
-    <a class="cell-link" href="https://forms.gle/ovz4p5VAEsB6G7fp7" target="_blank"
-      style="color: #ffffff;padding-top:15%;background-color: #3776f6ec;border-radius: 50px 50px 50px 50px;width: 120px;box-shadow: 1px 2px 10px #000000;text-align: center;padding: 8%;">
-      <strong>Upload<br>Notes</strong><br>
-      <i style="font-size: x-small;">(.zip Upload)</i>
-    </a>
+    <p style="text-align: center;color: #000000cd;text-shadow: 1px 1px 5px #bcf444c2;">Feeling Generous?</p>
+
+    <div class="container-6">
+      <a class="cell-link" href="https://forms.gle/uFq1vBSUbRhY5CZk6" target="_blank"
+        style="color: #424242;padding-top:15%;background-color: #ffffff;border-radius: 50px 50px 50px 50px;width: 100px;box-shadow: 1px 2px 10px #000000;text-align: center;padding: 8%;">
+        <strong>Upload<br>Questions</strong><br>
+        <i style="font-size: x-small;">(.pdf Upload)</i>
+      </a>
+      <a class="cell-link" href="https://forms.gle/ovz4p5VAEsB6G7fp7" target="_blank"
+        style="color: #ffffff;padding-top:15%;background-color: #3776f6ec;border-radius: 50px 50px 50px 50px;width: 100px;box-shadow: 1px 2px 10px #000000;text-align: center;padding: 8%;">
+        <strong>Upload<br>Notes</strong><br>
+        <i style="font-size: x-small;">(.zip Upload)</i>
+      </a>
+    </div>
+
   </div>
-
-</div>
 
   <br>
   <p align=center style="font-size: x-small;color: #00000086;">This Section was inspired by <a
