--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       <tr>
         <td colspan="2" style="max-width: 300px;display: block;margin: auto;">
           <a href="page-depth-01/General-Info.html" class="cell-link"
-            style="max-height: 80px;text-align: center;text-align: center;justify-content: center;">
+            style="max-height: 80px;text-align: center;text-align: center;justify-content: center;padding: 5%;">
             General Information<br><small><i style="font-size: xx-small;">(Notice,Questions,Outlines,...)</i></small>
           </a>
         </td>
@@ -299,16 +299,16 @@
           </a> -->
       </td>
 
-      <td>
+      <td  style="max-width: 300px;margin: auto;">
         <!-- <p> -->
-        <a href="page-depth-01\CP-aux.html" class="cell-link">
+        <a href="page-depth-01\CP-aux.html" class="cell-link" >
           Programming
           <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
           <!-- </p> -->
       </td>
 
 
-      <td>
+      <td  style="max-width: 300px;margin: auto;margin-top: 10px;">
         <!-- <p> -->
         <a href="page-depth-01\Curated-Resources.html" class="cell-link">
           Resources Dump
