--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
       <select id="department" onchange="updateSemesters()"
         style="padding: 5%;max-width: 245px;border-radius: 20px;min-height: 60px;margin-left: 5%;">
         <option value="" align="center">Department List</option>
-        <option value="cse">CSE</option>
-        <option value="ce">CE</option>
+        <option value="cse" align="center">CSE</option>
+        <option value="ce" align="center">CE</option>
         <!-- <option value="me">Mechanical Engineering</option> -->
       </select>
 
