--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
   </div>
 
   <div style="justify-content: center;display:flex;">
-    <hr style="border: 5px solid rgba(0, 0, 0, 0.619);
+    <hr style="border: 5px solid rgba(0, 0, 0, 0);
   border-radius: 5px;margin-left: 150px;margin-right: 150px;margin-bottom: 20px;min-width: 200px;width:50%">
   </div>
 
@@ -378,11 +378,6 @@
 
     </div>
 
-    <div style="justify-content: center;display:flex;">
-      <hr style="border: 5px solid rgba(0, 0, 0, 0.127);
-    border-radius: 5px;margin-bottom: 0px;width:150px">
-    </div>
-
 
     <div>
       <!-- BOTTOM CREDITS -->
@@ -401,6 +396,11 @@
           please be mindful of possible Legal issues (like Copyright materials)</small></p>
     </div>
 
+  </div>
+
+  <div style="justify-content: center;display:flex;">
+    <hr style="border: 5px solid rgba(0, 0, 0, 0.127);
+  border-radius: 5px;margin-bottom: 0px;margin-top: -5px;width:150px">
   </div>
 
   <br>
