--- a/page-depth-01/Curated-Resources.html
+++ b/page-depth-01/Curated-Resources.html
@@ -497,7 +497,7 @@
     note?</a>..<a
     href="https://docs.google.com/spreadsheets/d/1LnARUrE4lSPWi1w4Iw-kMl8nouB2F8UTn6Z8zvE0wGo/edit?usp=sharing"
     target="_blank" style="color:rgb(0, 0, 0);"><small>👀
-    </small></a><br>..........................................<small><a href=abstraction/wip.html
+    </small></a><br>..........................................<small><a href=../abstraction/wip.html
         style="color:rgba(74, 170, 214, 0.499);color:rgba(0, 0, 0, 0.071);">wip?</a></small></p>
 
     <!-- -------------------------------------------------------------- -->
