--- a/page-depth-01/Curated-Resources.html
+++ b/page-depth-01/Curated-Resources.html
@@ -7,6 +7,14 @@
     <title>Curated-Resources</title>
     <link rel="stylesheet" href="../styles.css">
     <style>
+        a {
+            -webkit-tap-highlight-color: transparent;
+            -webkit-touch-callout: none;
+            -webkit-user-select: none;
+            user-select: none;
+            outline: none;
+        }
+
         /* body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -491,14 +499,14 @@
 
         </table>
     </div>
- <!-- ANON NOTE (FEEDBACK) -->
- <p align=center style="color:rgba(0, 0, 0, 0);"><a href="https://forms.gle/onaybVpkL7Ud5hH37" target="_blank"
-    style="color: #00000086;">Leave a
-    note?</a>..<a
-    href="https://docs.google.com/spreadsheets/d/1LnARUrE4lSPWi1w4Iw-kMl8nouB2F8UTn6Z8zvE0wGo/edit?usp=sharing"
-    target="_blank" style="color:rgb(0, 0, 0);"><small>👀
-    </small></a><br>..........................................<small><a href=../abstraction/wip.html
-        style="color:rgba(74, 170, 214, 0.499);color:rgba(0, 0, 0, 0.071);">wip?</a></small></p>
+    <!-- ANON NOTE (FEEDBACK) -->
+    <p align=center style="color:rgba(0, 0, 0, 0);"><a href="https://forms.gle/onaybVpkL7Ud5hH37" target="_blank"
+            style="color: #00000086;">Leave a
+            note?</a>..<a
+            href="https://docs.google.com/spreadsheets/d/1LnARUrE4lSPWi1w4Iw-kMl8nouB2F8UTn6Z8zvE0wGo/edit?usp=sharing"
+            target="_blank" style="color:rgb(0, 0, 0);"><small>👀
+            </small></a><br>..........................................<small><a href=../abstraction/wip.html
+                style="color:rgba(74, 170, 214, 0.499);color:rgba(0, 0, 0, 0.071);">wip?</a></small></p>
 
     <!-- -------------------------------------------------------------- -->
     <!-- -------------------------------------------------------------- -->
@@ -741,7 +749,7 @@
             });
         </script>
 
-       
+
 
 
 
