--- a/page-depth-01/page-depth-02/S02.html
+++ b/page-depth-01/page-depth-02/S02.html
@@ -26,60 +26,59 @@
       <small>Project<br>References</small>
     </a>
     <a class="active-1" href="Blog.html">
-            <small>CSE<br>Blog</small>
-        </a>
-        <!-- <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
+      <small>CSE<br>Blog</small>
+    </a>
+    <!-- <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
             target="_blank">
             <small>oUITS<br>G-Drive</small>
         </a> -->
-        <div class="dropdown">
-          <button class="dropbtn" onclick="toggleDropdown(this)">More<br>Projects</button>
-          <!-- <button class="dropbtn">Quick<br>Links</button> -->
-          <div class="dropdown-content">
-              <!-- APK LINK -->
-              <div class="navigation1" style="background-color: #0000009b;"></div>
-              <script src="../../apk-link.js"></script>
-              <a style="color: black;" class="active-1" href="https://ouits-schedule.netlify.app/" target="blank">
-                  <small>oUITS<br>Scheduler</small>
-              </a>
-              <a style="color: black;" class="active-1"
-                  href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
-                  target="_blank">
-                  <small>oUITS<br>G-Drive</small>
-              </a>
-          </div>
+    <div class="dropdown">
+      <button class="dropbtn" onclick="toggleDropdown(this)">More<br>Projects</button>
+      <!-- <button class="dropbtn">Quick<br>Links</button> -->
+      <div class="dropdown-content">
+        <!-- APK LINK -->
+        <div class="navigation1" style="background-color: #0000009b;"></div>
+        <script src="../../apk-link.js"></script>
+        <a style="color: black;" class="active-1" href="https://ouits-schedule.netlify.app/" target="blank">
+          <small>oUITS<br>Scheduler</small>
+        </a>
+        <a style="color: black;" class="active-1"
+          href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing" target="_blank">
+          <small>oUITS<br>G-Drive</small>
+        </a>
       </div>
+    </div>
   </div>
   <script>
-      // Improved dropdown toggle function
-      function toggleDropdown(button) {
-          // Get the dropdown content element
-          var dropdownContent = button.nextElementSibling;
+    // Improved dropdown toggle function
+    function toggleDropdown(button) {
+      // Get the dropdown content element
+      var dropdownContent = button.nextElementSibling;
 
-          // Toggle the current dropdown
-          dropdownContent.classList.toggle("show");
+      // Toggle the current dropdown
+      dropdownContent.classList.toggle("show");
 
-          // Close all other dropdowns
-          document.querySelectorAll(".dropdown-content.show").forEach(function (openDropdown) {
-              if (openDropdown !== dropdownContent) {
-                  openDropdown.classList.remove("show");
-              }
-          });
-      }
-
-      // Add a global click event to close dropdowns when clicking outside
-      document.addEventListener("click", function (event) {
-          if (!event.target.matches('.dropbtn')) {
-              document.querySelectorAll(".dropdown-content.show").forEach(function (dropdown) {
-                  dropdown.classList.remove("show");
-              });
-          } else {
-              // Stop event from reaching the document listener when clicking a button
-              event.stopPropagation();
-          }
+      // Close all other dropdowns
+      document.querySelectorAll(".dropdown-content.show").forEach(function (openDropdown) {
+        if (openDropdown !== dropdownContent) {
+          openDropdown.classList.remove("show");
+        }
       });
+    }
+
+    // Add a global click event to close dropdowns when clicking outside
+    document.addEventListener("click", function (event) {
+      if (!event.target.matches('.dropbtn')) {
+        document.querySelectorAll(".dropdown-content.show").forEach(function (dropdown) {
+          dropdown.classList.remove("show");
+        });
+      } else {
+        // Stop event from reaching the document listener when clicking a button
+        event.stopPropagation();
+      }
+    });
   </script>
-  
+
 
   <!-- BOTTOM BAR "navbar" -->
 
@@ -95,46 +94,83 @@
 
 
   <br>
-  <div class="container-5" align=center>
+  <div class="container-5" align=center  style="width:76%;max-width: 600px;">
     <table class="resources-table-5" align=center style="width:90%;">
       <tr>
-        <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">2nd Semester FIles</p>
-      </tr>
-      <tr>
-        <td>
-          <a href="https://drive.google.com/drive/folders/1oCZr7uzvwOQL2ihchzd_K-I4cupaZ_Ix?usp=drive_link"
-              target="_blank" class="cell-link">S02 Notes <br> <small>+ <b>Classroom Files</b></small></a>
-        </td>
-        
-
-        <td>
-          <a href="https://drive.google.com/drive/folders/1oRIoBt5imfdKT2ecowlZx2dRj9bKi7eG?usp=drive_link"
-              target="_blank" class="cell-link">S02
-              Books</a>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <a href="https://drive.google.com/drive/folders/1o6ka61UmMUtnv3a9bsJ9xuv2h0Luacl2?usp=drive_link"
-              target="_blank" class="cell-link">S02
-              Outlines</a>
-        </td>
-
-        <td>
-          <a href="https://drive.google.com/drive/folders/1aQTzW3HLHkhW3HsfjGBIPKWPq0uapmct?usp=drive_link"
-              target="_blank" class="cell-link">S02
-              Questions</a>
-        </td>
+        <a href="https://drive.google.com/drive/folders/1_bke5c5MMU2yEUCq1zhKyN9ARvaVhBwc?usp=drive_link"
+          target="_blank" class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">2nd Semester
+          Courses</a>
       </tr>
       <tr>
         <td colspan="2">
           <div class="container">
 
-            <div class="img-container" style="height: 200px;">
+            <div class="img-container" style="max-height: 100px;padding: 2%;border-radius: 5px;">
               <img src="S02 Course List.webp" alt="Codeforces Streams Page">
               <!-- <div class="scroll-indicator">Scroll down to see more</div> -->
             </div>
           </div>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://drive.google.com/drive/folders/1HHBBJDZDZ4IKwAzf9vKjfty97Uw4FjW6?usp=drive_link"
+            target="_blank" class="cell-link">
+            OOP<br><small>CSE0613121 + CSE0613122</small>
+          </a>
+        </td>
+
+
+        <td>
+          <a href="https://drive.google.com/drive/folders/15DOOPBwkSfuimrrREW45jVcevx07-8nu?usp=drive_link"
+            target="_blank" class="cell-link">
+            Discrete Mathematics<br><small>CSE0541123</small>
+          </a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://drive.google.com/drive/folders/1_Zqg9MyV8XE0950vrqODdEVSlpYwnsZ-?usp=drive_link"
+            target="_blank" class="cell-link">
+            OPDE <br><small>MATH0541121</small>
+          </a>
+        </td>
+
+        <td>
+          <a href="https://drive.google.com/drive/folders/1WTnzJD1nXOM9IDU6bldtMWWA5plWfqTa?usp=drive_link"
+            target="_blank" class="cell-link">
+            FEE<br><small>EEE0713121 + EEE0713122</small>
+          </a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://drive.google.com/drive/folders/1ymhnpGQEAJhGhGWDim-yGtrsj-vDG1-e?usp=drive_link"
+            target="_blank" class="cell-link">
+            Web Application Design<br><small>CSE0613124</small>
+          </a>
+        </td>
+
+        <td>
+          <a href="https://drive.google.com/drive/folders/1rkl0UWNfJUS3FUxvvKJLKuOUjihWYKc-?usp=drive_link"
+            target="_blank" class="cell-link">
+            Engineering Drawing <br><small>ME0715122</small>
+          </a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://drive.google.com/drive/folders/1cbmYREhfX7_1VePKk-RPW26NCqbBrWYe?usp=drive_link"
+            target="_blank" class="cell-link">
+            Bangladesh Studies <br><small>GED0222121</small>
+          </a>
+        </td>
+
+        <td style="background-color: #00000000;">
+          <!-- <a href="https://drive.google.com/drive/folders/1rkl0UWNfJUS3FUxvvKJLKuOUjihWYKc-?usp=drive_link"
+            target="_blank" class="cell-link">
+            Engineering Drawing <br><small>ME0715122</small>
+          </a> -->
         </td>
       </tr>
     </table>
