added style for containders
  style="width:76%;max-width: 600px;"

--- a/page-depth-01/page-depth-02/S03.html
+++ b/page-depth-01/page-depth-02/S03.html
@@ -98,7 +98,7 @@
 
     <br>
 
-    <div class="container-5" align=center>
+    <div class="container-5" align=center  style="width:76%;max-width: 600px;">
         <table class="resources-table-5" align=center style="width:90%;">
             <tr>
                 <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">3rd Semester FIles</p>
