--- a/page-depth-01/page-depth-02/S07.html
+++ b/page-depth-01/page-depth-02/S07.html
@@ -97,7 +97,7 @@
 
   <br>
   
-  <div class="container-5" align=center>
+  <div class="container-5" align=center  style="width:76%;max-width: 600px;">
     <table class="resources-table-5" align=center style="width:90%;">
       <tr>
         <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">7th Semester FIles</p>
