--- a/page-depth-01/page-depth-02/S08.html
+++ b/page-depth-01/page-depth-02/S08.html
@@ -98,7 +98,20 @@
   <div class="container-5" align=center  style="width:76%;max-width: 600px;">
     <table class="resources-table-5" align=center style="width:90%;">
       <tr>
-        <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">8th Semester FIles</p>
+        <a href="#"
+          target="_blank" class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">8th Semester
+          Courses</a>
+      </tr>
+      <tr>
+        <td>
+          <div class="container">
+
+            <div class="img-container" style="max-height: 100px;padding: 2%;border-radius: 5px;">
+              <img src="S08 Course List.webp" alt="Codeforces Streams Page">
+              <!-- <div class="scroll-indicator">Scroll down to see more</div> -->
+            </div>
+          </div>
+        </td>
       </tr>
       <tr>
         <td>
@@ -127,17 +140,7 @@
           <!-- </p> -->
         </td>
       </tr>
-      <tr>
-        <td>
-          <div class="container">
-
-            <div class="img-container" style="height: 200px;">
-              <img src="S08 Course List.webp" alt="Codeforces Streams Page">
-              <!-- <div class="scroll-indicator">Scroll down to see more</div> -->
-            </div>
-          </div>
-        </td>
-      </tr>
+      
     </table>
   </div>
 
