--- a/page-depth-01/page-depth-02/S04.html
+++ b/page-depth-01/page-depth-02/S04.html
@@ -25,61 +25,60 @@
     <a class="active-1" href="../References.html">
       <small>Project<br>References</small>
     </a>
-     <a class="active-1" href="Blog.html">
-            <small>CSE<br>Blog</small>
-        </a>
-       <!-- <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
+    <a class="active-1" href="Blog.html">
+      <small>CSE<br>Blog</small>
+    </a>
+    <!-- <a class="active-1" href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
             target="_blank">
             <small>oUITS<br>G-Drive</small>
         </a> -->
-        <div class="dropdown">
-          <button class="dropbtn" onclick="toggleDropdown(this)">More<br>Projects</button>
-          <!-- <button class="dropbtn">Quick<br>Links</button> -->
-          <div class="dropdown-content">
-              <!-- APK LINK -->
-              <div class="navigation1" style="background-color: #0000009b;"></div>
-              <script src="../../apk-link.js"></script>
-              <a style="color: black;" class="active-1" href="https://ouits-schedule.netlify.app/" target="blank">
-                  <small>oUITS<br>Scheduler</small>
-              </a>
-              <a style="color: black;" class="active-1"
-                  href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing"
-                  target="_blank">
-                  <small>oUITS<br>G-Drive</small>
-              </a>
-          </div>
+    <div class="dropdown">
+      <button class="dropbtn" onclick="toggleDropdown(this)">More<br>Projects</button>
+      <!-- <button class="dropbtn">Quick<br>Links</button> -->
+      <div class="dropdown-content">
+        <!-- APK LINK -->
+        <div class="navigation1" style="background-color: #0000009b;"></div>
+        <script src="../../apk-link.js"></script>
+        <a style="color: black;" class="active-1" href="https://ouits-schedule.netlify.app/" target="blank">
+          <small>oUITS<br>Scheduler</small>
+        </a>
+        <a style="color: black;" class="active-1"
+          href="https://drive.google.com/drive/folders/1g93wCOUo4x0qvhNk_HHUb8Ozv_KuSLmL?usp=sharing" target="_blank">
+          <small>oUITS<br>G-Drive</small>
+        </a>
       </div>
+    </div>
   </div>
   <script>
-      // Improved dropdown toggle function
-      function toggleDropdown(button) {
-          // Get the dropdown content element
-          var dropdownContent = button.nextElementSibling;
+    // Improved dropdown toggle function
+    function toggleDropdown(button) {
+      // Get the dropdown content element
+      var dropdownContent = button.nextElementSibling;
 
-          // Toggle the current dropdown
-          dropdownContent.classList.toggle("show");
+      // Toggle the current dropdown
+      dropdownContent.classList.toggle("show");
 
-          // Close all other dropdowns
-          document.querySelectorAll(".dropdown-content.show").forEach(function (openDropdown) {
-              if (openDropdown !== dropdownContent) {
-                  openDropdown.classList.remove("show");
-              }
-          });
-      }
-
-      // Add a global click event to close dropdowns when clicking outside
-      document.addEventListener("click", function (event) {
-          if (!event.target.matches('.dropbtn')) {
-              document.querySelectorAll(".dropdown-content.show").forEach(function (dropdown) {
-                  dropdown.classList.remove("show");
-              });
-          } else {
-              // Stop event from reaching the document listener when clicking a button
-              event.stopPropagation();
-          }
+      // Close all other dropdowns
+      document.querySelectorAll(".dropdown-content.show").forEach(function (openDropdown) {
+        if (openDropdown !== dropdownContent) {
+          openDropdown.classList.remove("show");
+        }
       });
+    }
+
+    // Add a global click event to close dropdowns when clicking outside
+    document.addEventListener("click", function (event) {
+      if (!event.target.matches('.dropbtn')) {
+        document.querySelectorAll(".dropdown-content.show").forEach(function (dropdown) {
+          dropdown.classList.remove("show");
+        });
+      } else {
+        // Stop event from reaching the document listener when clicking a button
+        event.stopPropagation();
+      }
+    });
   </script>
-  
+
 
 
   <!-- BOTTOM BAR "navbar" -->
@@ -95,48 +94,51 @@
   <!-- ----------------------------------------------------------------------- -->
 
   <br>
-  <div class="container-5" align=center  style="width:76%;max-width: 600px;">
+  <div class="container-5" align=center style="width:76%;max-width: 600px;">
     <table class="resources-table-5" align=center style="width:90%;">
       <tr>
-        <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">4th Semester FIles</p>
-      </tr>
-      <tr>
-        <td>
-        <a href="https://drive.google.com/drive/folders/1cDUcQaB8cllhqZ4mb9vz4b331X3qZB1F?usp=drive_link"
-              target="_blank" class="cell-link">S04
-              Notes</a>
-        </td>
-
-        <td>
-        <a href="https://drive.google.com/drive/folders/1aC_MhhcbVZzyF2mEBFqpHCG_1uappYVJ?usp=drive_link"
-              target="_blank" class="cell-link">S04
-              Books</a>
-        </td>
-      </tr>
-      <tr>
-        <td>
-        <a href="https://drive.google.com/drive/folders/1ad-CJHUziHb0YOBll7VBEgC2bDa5BiLG?usp=drive_link"
-              target="_blank" class="cell-link">S04
-              Outlines</a>
-        </td>
-
-        <td>
-         <a href="https://drive.google.com/drive/folders/1bIuFeP0nhFK6XrLpNBpBF9hK7RqUKQcp?usp=drive_link"
-              target="_blank" class="cell-link">S04
-              Questions</a>
-        </td>
+        <a href="#"
+          target="_blank" class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">4th Semester
+          Courses</a>
       </tr>
       <tr>
         <td colspan="2">
           <div class="container">
 
-            <div class="img-container" style="height: 200px;">
+            <div class="img-container" style="max-height: 100px;padding: 2%;border-radius: 5px;">
               <img src="S04 Course List.webp" alt="Codeforces Streams Page">
               <!-- <div class="scroll-indicator">Scroll down to see more</div> -->
             </div>
           </div>
         </td>
       </tr>
+      <tr>
+        <td>
+          <a href="https://drive.google.com/drive/folders/1cDUcQaB8cllhqZ4mb9vz4b331X3qZB1F?usp=drive_link"
+            target="_blank" class="cell-link">S04
+            Notes</a>
+        </td>
+
+        <td>
+          <a href="https://drive.google.com/drive/folders/1aC_MhhcbVZzyF2mEBFqpHCG_1uappYVJ?usp=drive_link"
+            target="_blank" class="cell-link">S04
+            Books</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://drive.google.com/drive/folders/1ad-CJHUziHb0YOBll7VBEgC2bDa5BiLG?usp=drive_link"
+            target="_blank" class="cell-link">S04
+            Outlines</a>
+        </td>
+
+        <td>
+          <a href="https://drive.google.com/drive/folders/1bIuFeP0nhFK6XrLpNBpBF9hK7RqUKQcp?usp=drive_link"
+            target="_blank" class="cell-link">S04
+            Questions</a>
+        </td>
+      </tr>
+
     </table>
   </div>
 
