--- a/page-depth-01/page-depth-02/S06.html
+++ b/page-depth-01/page-depth-02/S06.html
@@ -100,8 +100,21 @@
   <div class="container-5" align=center  style="width:76%;max-width: 600px;">
     <table class="resources-table-5" align=center style="width:90%;">
       <tr>
-        <p class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);" target="_blank">6th Semester FIles</p>
+        <a href="#"
+          target="_blank" class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">6th Semester
+          Courses</a>
       </tr>
+      <tr>
+        <td>
+            <div class="container">
+
+                <div class="img-container" style="max-height: 100px;padding: 2%;border-radius: 5px;">
+                    <img src="S06 Course List.webp" alt="Codeforces Streams Page">
+                    <!-- <div class="scroll-indicator">Scroll down to see more</div> -->
+                </div>
+            </div>
+        </td>
+    </tr>
       <tr>
         <td>
           <a href="https://drive.google.com/drive/folders/1aCb3nXXFO7aQOhzZqVBB2mATI3jl4e8C?usp=drive_link" target="_blank" class="cell-link">S06
@@ -120,17 +133,7 @@
             Questions</a>
         </td>
       </tr>
-      <tr>
-        <td>
-            <div class="container">
-
-                <div class="img-container" style="height: 200px;">
-                    <img src="S06 Course List.webp" alt="Codeforces Streams Page">
-                    <!-- <div class="scroll-indicator">Scroll down to see more</div> -->
-                </div>
-            </div>
-        </td>
-    </tr>
+      
     </table>
   </div>
 
