--- a/page-depth-01/page-depth-02/S03.html
+++ b/page-depth-01/page-depth-02/S03.html
@@ -119,47 +119,50 @@
             </tr>
             <tr>
                 <td>
-                    <a href="https://drive.google.com/drive/folders/1IXrJhfOaFpGob4B06-9DMRo4DpHc6fzg?usp=sharing"
+                    <a href="https://drive.google.com/drive/folders/1pmKWdksSPezGZdPct2gAydYctKFJMvpI?usp=drive_link"
                         target="_blank" class="cell-link">
-                        S03 Class Routine (B55)
+                        DSA 1<br><small>CSE0613211 + CSE0613212</small>
                     </a>
                 </td>
 
 
                 <td>
-                    <a href="https://drive.google.com/drive/folders/1aGrfFvtSqWjRlkAoSaKlGC9el98KWkNR?usp=drive_link"
+                    <a href="https://drive.google.com/drive/folders/11rhTTRViSz-mhOVCV0uwtDgBimN5GO8B?usp=drive_link"
                         target="_blank" class="cell-link">
-                        S03 Books
-                    </a>
-                </td>
-            </tr>
-            <tr>
-
-                <td>
-                    <a href="https://drive.google.com/drive/folders/1aBzwwuvyk43b1nuIvY_5Ala0K_f8pQ-k?usp=drive_link"
-                        target="_blank" class="cell-link">
-                        S03 Notes
-                    </a>
-                </td>
-                <td>
-                    <a href="https://drive.google.com/drive/folders/1mkoNFbVkNaX8vqLbKfsF5GbXdZ6UnGVo?usp=drive_link"
-                        target="_blank" class="cell-link">
-                        S03 Classroom Files
+                        DLD<br><small>CSE0611215 + CSE0611216</small>
                     </a>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <a href="https://drive.google.com/drive/folders/1PNESVZxtQOEDnTjasou_9b7Gi8nLZFIi?usp=drive_link"
+                    <a href="https://drive.google.com/drive/folders/1WbxkGhlKC84ps7r2Ekqs0-Pggq9twvGT?usp=drive_link"
                         target="_blank" class="cell-link">
-                        S03 Outlines
+                        DMBS<br><small>CSE0612215 + CSE0612216</small>
                     </a>
                 </td>
 
+
                 <td>
-                    <a href="https://drive.google.com/drive/folders/1adCR8te_gS_erh15uhBnFrkdUHHYE0hb?usp=drive_link"
+                    <a href="https://drive.google.com/drive/folders/1bpqvXJuu2qPZ-hVtkK4D9kotKvlqMtH0?usp=drive_link"
                         target="_blank" class="cell-link">
-                        S03 Questions
+                        CGLAVA
+                        <br><small>MATH0541211</small>
+                    </a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="https://drive.google.com/drive/folders/1tjlH5xP-PlcosHZxcPwvinQE-wAUzOZS?usp=drive_link"
+                        target="_blank" class="cell-link">
+                        Web Application Design<br><small> CSE0613124</small>
+                    </a>
+                </td>
+
+
+                <td>
+                    <a href="https://drive.google.com/drive/folders/1G5HhXeaaESsUUzvshJI_-UFpQOSMZL-s?usp=drive_link"
+                        target="_blank" class="cell-link">
+                        Data Communication <br><small>CSE0612223</small>
                     </a>
                 </td>
             </tr>
