--- a/page-depth-01/page-depth-02/S08.html
+++ b/page-depth-01/page-depth-02/S08.html
@@ -115,20 +115,17 @@
       </tr>
       <tr>
         <td>
-          <!-- <p>  -->
             <a href="https://drive.google.com/drive/folders/1tk0VTCKn6lN7E9z6nwMchCBK3kf6XpPr?usp=drive_link"
             target="_blank" class="cell-link">S08
             Books</a>
-          <!-- </p> -->
         </td>
       </tr>
       <tr>
         <td>
-          <!-- <p>   -->
-            <a href="https://drive.google.com/drive/folders/1aKT3eqY5MncYlZzBQOMnDokaGhg2Ear0?usp=drive_link"
-            target="_blank" class="cell-link">S08
-            Outlines</a>
-          <!-- </p> -->
+            <a href="https://drive.google.com/drive/folders/1pmKWdksSPezGZdPct2gAydYctKFJMvpI?usp=drive_link"
+            target="_blank" class="cell-link">DSA 1 CSE0613211 + CSE0613212
+          
+          </a>
         </td>
       </tr>
       <tr>
