--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 
   <div style="justify-content: center;display:flex;">
     <hr style="border: 5px solid rgba(0, 0, 0, 0.619);
-      border-radius: 5px;margin-left: 150px;margin-right: 150px;margin-bottom: 50px;min-width: 200px;width:50%">
+      border-radius: 5px;margin-left: 150px;margin-right: 150px;margin-bottom: 50px;min-width: 200px;width:50%;max-width: 500px;;">
   </div>
 
   <!-- TABLE FOR SOCIALS AND END CREDIT -->
