--- a/page-depth-01/page-depth-02/S04.html
+++ b/page-depth-01/page-depth-02/S04.html
@@ -97,8 +97,9 @@
   <div class="container-5" align=center style="width:76%;max-width: 600px;">
     <table class="resources-table-5" align=center style="width:90%;">
       <tr>
-        <a href="#"
-          target="_blank" class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">4th Semester
+        <a href="https://drive.google.com/drive/folders/1_ihH9qW1qBSPKn_cHzf6w6cRUcYEE3Zr?usp=drive_link"
+          target="_blank" class="highlights" align="center" style="color: rgba(240, 248, 255, 0.649);">4th
+          Semester
           Courses</a>
       </tr>
       <tr>
@@ -114,31 +115,72 @@
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1cDUcQaB8cllhqZ4mb9vz4b331X3qZB1F?usp=drive_link"
-            target="_blank" class="cell-link">S04
-            Notes</a>
+          <a href="https://drive.google.com/drive/folders/1ZR__njpWSwOeJNhgX1t5eWrIzfmoO0fI?usp=drive_link"
+            target="_blank" class="cell-link">
+            DSA 2
+            <br><small>CSE251 + CSE252</small>
+          </a>
         </td>
 
         <td>
-          <a href="https://drive.google.com/drive/folders/1aC_MhhcbVZzyF2mEBFqpHCG_1uappYVJ?usp=drive_link"
-            target="_blank" class="cell-link">S04
-            Books</a>
+          <a href="https://drive.google.com/drive/folders/1qnJrHU72Mub3gHfwcabIM6ySP14E-mt_?usp=drive_link"
+            target="_blank" class="cell-link">
+            Data Communication
+            <br><small>CSE253</small>
+          </a>
         </td>
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1ad-CJHUziHb0YOBll7VBEgC2bDa5BiLG?usp=drive_link"
-            target="_blank" class="cell-link">S04
-            Outlines</a>
+          <a href="https://drive.google.com/drive/folders/1Lk_dkegB5YNBlQpYrOIcUP0KYS7e-oo0?usp=drive_link"
+            target="_blank" class="cell-link">
+            Theory of Computation
+            <br><small>CSE213</small>
+          </a>
         </td>
 
         <td>
-          <a href="https://drive.google.com/drive/folders/1bIuFeP0nhFK6XrLpNBpBF9hK7RqUKQcp?usp=drive_link"
-            target="_blank" class="cell-link">S04
-            Questions</a>
+          <a href="https://drive.google.com/drive/folders/1wFrG_OxI7-BzFHadiAX9aFJRPVH0_TgW?usp=drive_link"
+            target="_blank" class="cell-link">
+            LAP&SE
+            <br><small> CSE217</small>
+          </a>
         </td>
       </tr>
+      <tr>
+        <td>
+          <a href="https://drive.google.com/drive/folders/1WVfboSGhSvmWjYBU23s2Bk79JX7SyoI2?usp=drive_link"
+            target="_blank" class="cell-link">
+            CVFALT
+            <br><small> MAT265</small>
+          </a>
+        </td>
 
+        <td>
+          <a href="https://drive.google.com/drive/folders/1achIW_ZkLk7SUTcCBIamg7CHvvl2yeSb?usp=drive_link"
+            target="_blank" class="cell-link">
+            Accounting
+            <br><small> GED113</small>
+          </a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://drive.google.com/drive/folders/1yidd6DDh7Oy-D9DTHR3iQApWCXQ9lH39?usp=drive_link"
+            target="_blank" class="cell-link">
+            Internet Programming Lab 
+            <br><small>CSE208</small>
+          </a>
+        </td>
+
+        <td style="background-color: #00000000;">
+          <!-- <a href="https://drive.google.com/drive/folders/1achIW_ZkLk7SUTcCBIamg7CHvvl2yeSb?usp=drive_link"
+            target="_blank" class="cell-link">
+            Accounting
+            <br><small> GED113</small>
+          </a> -->
+        </td>
+      </tr>
     </table>
   </div>
 
