fixed flex collapse

--- a/page-depth-01/page-depth-02/S08.html
+++ b/page-depth-01/page-depth-02/S08.html
@@ -114,35 +114,17 @@
       </tr>
       <tr>
         <td>
-          <a href="https://drive.google.com/drive/folders/1WVfboSGhSvmWjYBU23s2Bk79JX7SyoI2?usp=drive_link"
+          <a href="https://drive.google.com/drive/folders/1j1Os8LHGAgfOl1gbJjiqWWy05kmsk4Mk?usp=drive_link"
             target="_blank" class="cell-link">
-            CVFALT
-            <br><small> MAT265</small>
+            AI
+            <br><small>CSE311 + CSE312</small>
           </a>
         </td>
-
+      
         <td>
-          <a href="https://drive.google.com/drive/folders/1achIW_ZkLk7SUTcCBIamg7CHvvl2yeSb?usp=drive_link"
-            target="_blank" class="cell-link">
-            Accounting
-            <br><small> GED113</small>
-          </a>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <a href="https://drive.google.com/drive/folders/1WVfboSGhSvmWjYBU23s2Bk79JX7SyoI2?usp=drive_link"
-            target="_blank" class="cell-link">
-            CVFALT
-            <br><small> MAT265</small>
-          </a>
-        </td>
-
-        <td>
-          <a href="https://drive.google.com/drive/folders/1achIW_ZkLk7SUTcCBIamg7CHvvl2yeSb?usp=drive_link"
-            target="_blank" class="cell-link">
-            Accounting
-            <br><small> GED113</small>
+          <a href="https://drive.google.com/drive/folders/1ziNG4HDSQVDz0gR8qU1OMbtVW8EPeVRM?usp=drive_link"
+            target="_blank" class="cell-link">CN
+            <br><small>CSE313 + CSE314</small>
           </a>
         </td>
       </tr>
